Display: Add some adding to custom scrollbar near ends to make it looks a little nicer Display: Fix scroll functions when custom scollbars enabled Display: Fix scrollToCharacter

--- a/src/css/panelbar.css
+++ b/src/css/panelbar.css
@@ -6,7 +6,7 @@
   color: var(--theme-color) !important;
   padding: 2px;
   z-index: 1;
-  overflow: auto;
+  overflow: hidden;
   border: 3px solid rgb(108, 117, 125);
   border-image: var(--theme-border-image) 3 repeat;
   text-align: center;
