--- a/src/css/scrollbar.theme.css
+++ b/src/css/scrollbar.theme.css
@@ -2,6 +2,7 @@
 .scroll-corner {
   background: var(--theme-bg-secondary-color);
   color: black;
+  padding: 1px;
 }
 
 .scroll-thumb {
